<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">


    <item
        android:title="@string/My_Account"
        >
        <menu>

            <item
                android:id="@+id/Home"
                android:title="Home"
                android:icon="@drawable/ic_baseline_home_24"
                />
              <item
                  android:id="@+id/profile"
                  android:title="@string/My_Profile"
                  android:icon="@drawable/ic_baseline_account_box_24"
                  />

              <item
                  android:id="@+id/Password_Change"
                  android:title="@string/Change_password"
                  android:icon="@drawable/ic_baseline_lock_24"

                  />
            <item
                android:id="@+id/NewsFragment"
                android:title="News"
                android:icon="@drawable/ic_baseline_newspaper_24"
                />
               <item
                   android:id="@+id/logout"
                   android:title="@string/Log_out"
                   android:icon="@drawable/ic_baseline_logout_25"
                   />


        </menu>
    </item>
    <item
        android:title="@string/Other"
        >
        <menu>
            <item
                android:id="@+id/Share"
                android:title="@string/share"
                android:icon="@drawable/ic_baseline_share_24"
                />

        </menu>
    </item>
</menu>