<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/coolergrey"
    tools:context=".view.emergencypage">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                style="bold"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="25dp"
                android:layout_marginBottom="25dp"
                android:text="Emergency numbers"
                android:textColor="@color/grey"
                android:textSize="24dp" />

        </LinearLayout>

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginTop="8dp"
                android:layout_marginRight="5dp"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="5dp">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/POLICE"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginTop="40dp"
                                android:text="Police"
                                android:textColor="@color/blue"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/police_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/POLICE"
                                android:layout_marginLeft="35dp"
                                android:layout_marginTop="1dp"
                                android:layout_marginRight="35dp"
                                android:drawableStart="@drawable/ic_baseline_phone_24"
                                android:text="@string/police_number"
                                android:textColor="@color/red"
                                android:textSize="15dp"
                                android:textStyle="normal" />


                            <Button
                                android:id="@+id/btnPolice"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/transparent"
                                android:onClick="police" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="5dp">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/Fire_department"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginTop="40dp"
                                android:text="Fire department"
                                android:textColor="@color/blue"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/fire_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/Fire_department"
                                android:layout_marginLeft="35dp"
                                android:layout_marginTop="1dp"
                                android:layout_marginRight="35dp"
                                android:drawableStart="@drawable/ic_baseline_phone_24"
                                android:text="@string/Fire_number"
                                android:textColor="@color/red"
                                android:textSize="15dp"
                                android:textStyle="normal" />


                            <Button
                                android:id="@+id/btnFire"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/transparent"
                                android:onClick="Fire" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="5dp">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/Ambulance"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginTop="40dp"
                                android:text="Ambulance"
                                android:textColor="@color/blue"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/ambulance_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/Ambulance"
                                android:layout_marginLeft="35dp"
                                android:layout_marginTop="1dp"
                                android:layout_marginRight="35dp"
                                android:drawableStart="@drawable/ic_baseline_phone_24"
                                android:text="@string/ambulance_number"
                                android:textColor="@color/red"
                                android:textSize="15dp"
                                android:textStyle="normal" />


                            <Button
                                android:id="@+id/btnAmbulance"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/transparent"
                                android:onClick="ambulance" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="5dp">

                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/Child_line"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginTop="40dp"
                                android:text="Child line"
                                android:textColor="@color/blue"
                                android:textSize="18sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/Child_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/Child_line"
                                android:layout_marginLeft="35dp"
                                android:layout_marginTop="1dp"
                                android:layout_marginRight="35dp"
                                android:drawableStart="@drawable/ic_baseline_phone_24"
                                android:text="@string/child_number"
                                android:textColor="@color/red"
                                android:textSize="15dp"
                                android:textStyle="normal" />


                            <Button
                                android:id="@+id/btnChild_line"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/transparent"
                                android:onClick="Child" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="5dp">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/Crime_stop"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginTop="40dp"
                                android:text="Crime stop"
                                android:textColor="@color/blue"
                                android:textSize="18dp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/CrimeStop_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/Crime_stop"
                                android:layout_marginLeft="35dp"
                                android:layout_marginTop="1dp"
                                android:layout_marginRight="35dp"
                                android:drawableStart="@drawable/ic_baseline_phone_24"
                                android:text="@string/crime_number"
                                android:textColor="@color/red"
                                android:textSize="15dp"
                                android:textStyle="normal" />


                            <Button
                                android:id="@+id/btnCrime_stop"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/transparent"
                                android:onClick="CRIME" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>


                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <androidx.cardview.widget.CardView
                        android:layout_width="0dp"
                        android:layout_height="80dp"
                        android:layout_marginLeft="2dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginRight="2dp"
                        android:layout_weight="1"
                        app:cardCornerRadius="5dp">


                        <RelativeLayout
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <TextView
                                android:id="@+id/GBV"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_centerInParent="true"
                                android:layout_marginTop="40dp"
                                android:text="Gender based violance"
                                android:textColor="@color/blue"
                                android:textSize="20sp"
                                android:textStyle="bold" />

                            <TextView
                                android:id="@+id/gbv_number"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_below="@id/GBV"
                                android:layout_marginLeft="35dp"
                                android:layout_marginTop="1dp"
                                android:layout_marginRight="35dp"
                                android:drawableStart="@drawable/ic_baseline_phone_24"
                                android:text="@string/Gbv_number"
                                android:textColor="@color/red"
                                android:textSize="15dp"
                                android:textStyle="normal" />


                            <Button
                                android:id="@+id/btnGBV"
                                android:layout_width="match_parent"
                                android:layout_height="match_parent"
                                android:background="@color/transparent"
                                android:onClick="GBV" />
                        </RelativeLayout>
                    </androidx.cardview.widget.CardView>

                </LinearLayout>


            </LinearLayout>

        </ScrollView>
    </LinearLayout>
</RelativeLayout>